# c_simple_http

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  LICENSE  Makefile  README.md
.forgejo/workflows/: build_releases.yaml  unittest.yml
example_config/: each_file_one.html  each_file_two.html  each_file_zero.html  example.config  inner.html  var.html
src/: arg_parse.c  arg_parse.h  big_endian.c  big_endian.h  config.c  config.h  constants.h  generate.c  generate.h  globals.c  globals.h  helpers.c  helpers.h  html_cache.c  html_cache.h  http.c  http.h  http_template.c  http_template.h  main.c  signal_handling.c  signal_handling.h  static.c  static.h  tcp_socket.c  tcp_socket.h  test.c
